# crop-yield-prediction-climate-change

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 01-exploration.html  02-preprocessing.html  03-feature-engineering.html  04-modeling.html  05-evaluation.html  06-scenario_analysis.html  07-report.html  index.html
notebooks/: 01-exploration.ipynb  02-preprocessing.ipynb  03-feature-engineering.ipynb  04-modeling.ipynb  05-evaluation.ipynb  06-scenario_analysis.ipynb  07-report.ipynb  playground.ipynb
src/crop/: merge_data.py  nasa_data.py  wdi_data.py
