[project]
name = "crop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "nbstripout>=0.8.1",
    "numpy>=2.3.3",
    "pandas>=2.3.0",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
